<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#2E3436"
    android:padding="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/profile_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/profile"
        android:textColor="#EDD400"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/border"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/profile_user_listview"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:cacheColorHint="#0000"
            android:divider="#0000"
            android:dividerHeight="0dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/profile_without_user"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/profile_create_hint"
            android:textColor="#AD7FA8"
            android:textSize="28sp" />

        <View
            android:id="@+id/profile_hr"
            android:layout_width="220dp"
            android:layout_height="2dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:background="#555" />

        <TextView
            android:id="@+id/profile_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/create"
            android:textColor="#AD7FA8"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:visibility="gone" >

        <Button
            android:id="@+id/profile_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirm" />

        <Button
            android:id="@+id/profile_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>

</RelativeLayout>