<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#2E3436"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/user_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#EDD400"
        android:textSize="26sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="30dp"
        android:background="#000"
        android:orientation="vertical"
        android:padding="6dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/user_add"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginBottom="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="#AD7FA8"
                android:gravity="center"
                android:text="@string/user_add"
                android:textColor="#FFF"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/user_compare"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:background="#40C0E0"
                android:gravity="center"
                android:text="@string/user_compare"
                android:textColor="#FFF"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/user_export"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:background="#2E3436"
                android:gravity="center"
                android:text="@string/user_export"
                android:textColor="#FFF"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/user_settings"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:background="#2E3436"
                android:gravity="center"
                android:text="@string/user_settings"
                android:textColor="#FFF"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>