<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/username" />

        <EditText
            android:id="@+id/create_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sex" />

        <EditText
            android:id="@+id/create_sex"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sex" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/style" />

        <EditText
            android:id="@+id/create_style"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/style" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/color" />

        <EditText
            android:id="@+id/create_color"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/color" />
    </LinearLayout>

</ScrollView>